--- a/tailor/src/pages/Customer/vieweditcustomer.css
+++ b/tailor/src/pages/Customer/vieweditcustomer.css
@@ -2,3 +2,20 @@
 {
     flex: 4;
 }
+.Editcustomer{  
+    border: none;
+    background-color: green;
+    color: white;
+    border-radius: 10px;
+    padding:5px 10px;
+    margin-right: 20px; 
+    cursor: pointer;
+}
+.deleteItem{
+    cursor: pointer;
+    color: gray;
+}
+.deleteItem:hover
+{
+    color: pink;
+}
